--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,14 @@
 192.187.56.20
 192.187.56.30
 
+[localhost]
+localhost
+
+[localhost:vars]
+Course="Devops from inventory"
+Trainer="siva"
+Duration="110HRS"
+
 [web]
 100.24.24.40
 
