--- a/inventory.ini
+++ b/inventory.ini
@@ -8,6 +8,8 @@ localhost
 Course="Devops from inventory"
 Trainer="siva"
 Duration="110HRS"
+PERSON="siva from inventory"
+WISHES="morning from inventory"
 
 [web]
 100.24.24.40
