--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -14,9 +14,9 @@
     WISHES: "morning from PLAY"
   tasks:
   - name: check variables
-    vars:
-      PERSON: "siva from TASK"
-      WISHES: "morning from TASK"
+    #vars:
+     # PERSON: "siva from TASK"
+      #WISHES: "morning from TASK"
     ansible.builtin.debug:
       msg: "Hello {{PERSON}}, Good {{WISHES}}"
       
