--- a/variables.yaml
+++ b/variables.yaml
@@ -3,5 +3,5 @@ Trainer: "Siva"
 Duration: "110HRS"
 
 
-PERSON: "siva from file"
-WISHES: "morning from file"
+# PERSON: "siva from file"
+# WISHES: "morning from file"
