--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -2,13 +2,13 @@
   hosts: localhost 
   vars_files:
   - variables.yaml
-  vars_prompt:
-  - name: PERSON
-    prompt: Please enter your person 
-    private: false # user can see what they are entering 
-  - name: WISHES
-    prompt: Please enter your wishes 
-    private: false # user cann't see what they are entering 
+  # vars_prompt:
+  # - name: PERSON
+  #   prompt: Please enter your person 
+  #   private: false # user can see what they are entering 
+  # - name: WISHES
+  #   prompt: Please enter your wishes 
+  #   private: false # user cann't see what they are entering 
   vars: 
     PERSON: "siva from PLAY"
     WISHES: "morning from PLAY"
@@ -19,4 +19,10 @@
       #WISHES: "morning from TASK"
     ansible.builtin.debug:
       msg: "Hello {{PERSON}}, Good {{WISHES}}"
+
+
+#1. Command line 
+#2. task 
+#3. file 
+#4. prompt      
       
