--- a/10-vars-preference.yaml
+++ b/10-vars-preference.yaml
@@ -9,9 +9,9 @@
   # - name: WISHES
   #   prompt: Please enter your wishes 
   #   private: false # user cann't see what they are entering 
-  vars: 
-    PERSON: "siva from PLAY"
-    WISHES: "morning from PLAY"
+  # vars: 
+  #   PERSON: "siva from PLAY"
+  #   WISHES: "morning from PLAY"
   tasks:
   - name: check variables
     #vars:
@@ -25,4 +25,5 @@
 #2. task 
 #3. file 
 #4. prompt      
+#5. play 
       
